Fix modal content being too close to modal boundary
# Shadows and borders were obscured without this. I don't know why there
# was such large left padding before though, since it wasn't applied
# without !important on the end?

--- a/src/scss/modals.scss
+++ b/src/scss/modals.scss
@@ -39,7 +39,7 @@
   }
 
   .modal-body {
-    padding-left: 1.875rem;
+    padding-left: 0.25rem !important;
     overflow: auto;
   }
 
